# SerenMemory

./: .gitignore  Makefile  README.md  SECURITY.md  SerenMemory.slnx  dependabot.yml  mcp.sample.json  seren-memory-setup.ps1  seren-memory-setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
SerenMemory/: .gitignore  README.md  SerenMemory.pyproj  pyproject.toml  seren-memory.service.sample  seren-memory.yaml.sample
SerenMemory/seren_memory/: __init__.py  __main__.py  _supervised.py  app.py  collections.py  config.py  embedder.py
SerenMemory/seren_memory/consolidator/: __init__.py  service.py
SerenMemory/seren_memory/mcp/: __init__.py  server.py  tools.py
SerenMemory/seren_memory/models/: __init__.py  schemas.py
SerenMemory/seren_memory/routes/: __init__.py  long.py  near.py  search.py  short.py
SerenMemory/seren_memory/viewer/: halls.html
SerenMemory/seren_memory/viewer/ui/: body.html  header_aside.html  scripts.js  styles.css  tabs.html
SerenMemory/tests/: conftest.py  test_auth.py  test_brief.py  test_by_topic.py  test_drafts.py  test_embedder.py  test_mcp_endpoint.py  test_mcp_fallback.py  test_mcp_mount.py  test_mcp_tools.py  test_near_listing.py  test_search.py  test_smoke.py  test_tls.py  test_validation.py
SerenMemory/viewer/: halls.html
SerenMemoryVSCode/: .vscodeignore  README.md  package-lock.json  package.json  publish.ps1  tsconfig.json  vitest.config.ts
SerenMemoryVSCode/seren_memory-vscode/: .vscodeignore  esbuild.js
SerenMemoryVSCode/seren_memory-vscode/src/: client.ts  config.ts  extension.ts  tools.ts
SerenMemoryVSCode/test/: client.test.ts
SerenMemoryVSCode/test/mocks/: vscode.ts
