[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seren-memory"
dynamic = ["version"]
description = "Three-tier LLM memory with consolidation. The Halls of Memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Chad Roesler" }]
keywords = ["llm", "memory", "vector-db", "chromadb", "consolidation", "seren"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # starlette >= 0.43 emits StarletteDeprecationWarning when fastapi.testclient
    # falls back to httpx; installing httpx2 silences it and future-proofs the
    # test stack against the upcoming hard cutover.
    "httpx2>=2.3",
]

[project.scripts]
seren-memory = "seren_memory.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seren_memory*"]

# Ship the viewer HTML inside the wheel. Without this, pip strips non-.py
# files and GET /viewer 404s on an installed copy (works in dev checkout,
# silently breaks once installed - the classic package-data gotcha).
[tool.setuptools.package-data]
seren_memory = ["viewer/*.html"]

[tool.setuptools_scm]
# .git is one level above pyproject.toml (repo root, not the SerenMemory subdir)
root = ".."
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
asyncio_mode = "auto"
