[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seren-memory"
dynamic = ["version"]
description = "Three-tier LLM memory with consolidation. The Halls of Memory."
readme = "README.md"
# Upper bound is the chromadb wall, not ours: SerenMemory itself is fine on
# 3.13+, but chromadb's transitive deps don't build there yet (an lz4 wheel
# build failure). Capping here turns a cryptic transitive build explosion into
# a clean "needs a different Python" from pip. LIFT THE <3.13 the day chromadb
# ships 3.13 support (bump the CI matrix to match in the same commit).
requires-python = ">=3.10,<3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Chad Roesler" }]
keywords = ["llm", "memory", "vector-db", "chromadb", "consolidation", "seren"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
mcp = [
    # The Python MCP SDK from Anthropic. FastMCP (the high-level server
    # API) was merged into the main SDK; this single dep gives us both.
    # Pin loosely - the SDK is moving fast; our server.py is written to
    # tolerate the streamable_http→sse transport-name drift across recent
    # versions.
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # starlette >= 0.43 emits StarletteDeprecationWarning when fastapi.testclient
    # falls back to httpx; installing httpx2 silences it and future-proofs the
    # test stack against the upcoming hard cutover.
    "httpx2>=2.3",
]

[project.scripts]
seren-memory = "seren_memory.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seren_memory*"]

# Ship the viewer HTML inside the wheel. Without this, pip strips non-.py
# files and GET /viewer 404s on an installed copy (works in dev checkout,
# silently breaks once installed - the classic package-data gotcha).
[tool.setuptools.package-data]
seren_memory = ["viewer/*.html"]

[tool.setuptools_scm]
# .git is one level above pyproject.toml (repo root, not the SerenMemory subdir)
root = ".."
version_scheme = "release-branch-semver"
# Write the tag-derived version into the package (shipped in the wheel, read
# by __init__ / importlib.metadata). Replaces the old sed-on-__init__ hack -
# version now flows from the git tag with no manual step. _version.py is
# gitignored; it's a build artifact, never committed.
version_file = "seren_memory/_version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"